--- a/app/src/main/res/layout/activity_main_city_a.xml
+++ b/app/src/main/res/layout/activity_main_city_a.xml
@@ -3,5 +3,5 @@
     android:id="@+id/root_activity_main_city"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.mainCity.MainCityActivity"
+    tools:context=".ui.main.mainCity.MainCityActivity"
     />
