--- a/app/src/main/res/layout/activity_top_places_to_see_a.xml
+++ b/app/src/main/res/layout/activity_top_places_to_see_a.xml
@@ -3,5 +3,5 @@
     android:id="@+id/root_activity_top_places_to_see"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.topPlacesToSee.TopPlacesToSeeActivity"
+    tools:context=".ui.main.topPlacesToSee.TopPlacesToSeeActivity"
     />
