--- a/app/src/main/res/layout/adapter_top_places_to_see.xml
+++ b/app/src/main/res/layout/adapter_top_places_to_see.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -54,7 +54,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_name"
             app:layout_constraintVertical_bias="0.053" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <View
