--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,12 +4,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/fav__city_menu"
+        android:id="@+id/favCity"
         android:title="@string/favourites_city"
         app:showAsAction="collapseActionView"/>
 
     <item
-        android:id="@+id/sign_out_menu"
+        android:id="@+id/signOut"
         android:title="@string/sign_out"
         app:showAsAction="collapseActionView"/>
 </menu>
