--- a/app/src/main/res/layout/adapter_top_places_to_eat.xml
+++ b/app/src/main/res/layout/adapter_top_places_to_eat.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/iv_image"
+        android:id="@+id/ivImage"
         android:layout_width="184dp"
         android:layout_height="179dp"
         android:layout_marginStart="8dp"
@@ -33,7 +33,7 @@
         android:textSize="@dimen/text_size_16"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_image"
+        app:layout_constraintStart_toEndOf="@+id/ivImage"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -49,7 +49,7 @@
         android:textSize="@dimen/text_size_14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_image"
+        app:layout_constraintStart_toEndOf="@+id/ivImage"
         app:layout_constraintTop_toBottomOf="@+id/tv_score" />
 
     <TextView
@@ -63,7 +63,7 @@
         android:textSize="@dimen/text_size_14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_image"
+        app:layout_constraintStart_toEndOf="@+id/ivImage"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
 
