--- a/app/src/main/res/layout/adapter_top_scored_tags_for_location.xml
+++ b/app/src/main/res/layout/adapter_top_scored_tags_for_location.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/iv_image"
+        android:id="@+id/ivImage"
         android:layout_width="184dp"
         android:layout_height="179dp"
         android:layout_marginStart="8dp"
@@ -34,7 +34,7 @@
         android:textSize="@dimen/text_size_16"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_image"
+        app:layout_constraintStart_toEndOf="@+id/ivImage"
         app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -49,11 +49,11 @@
             android:textSize="@dimen/text_size_14"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/iv_image"
+            app:layout_constraintStart_toEndOf="@+id/ivImage"
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
         <ImageView
-            android:id="@+id/iv_more_details"
+            android:id="@+id/ivDetails"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -64,7 +64,7 @@
             android:textSize="@dimen/text_size_14"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/iv_image"
+            app:layout_constraintStart_toEndOf="@+id/ivImage"
             app:layout_constraintTop_toBottomOf="@+id/tv_price" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
