--- a/app/src/main/res/layout/city_content.xml
+++ b/app/src/main/res/layout/city_content.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<merge
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -86,3 +89,4 @@
         app:layout_constraintTop_toBottomOf="@+id/tvSnippet" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
