--- a/app/src/main/res/layout/fragment_city_search_result.xml
+++ b/app/src/main/res/layout/fragment_city_search_result.xml
@@ -38,8 +38,8 @@
         android:gravity="center"
         android:text="@string/couldnt_find_city"
         android:textSize="@dimen/text_size_16"
-        app:layout_constraintBottom_toBottomOf="@+id/my_recycler_view"
-        app:layout_constraintEnd_toEndOf="@+id/my_recycler_view"
+        app:layout_constraintBottom_toBottomOf="@+id/rvCities"
+        app:layout_constraintEnd_toEndOf="@+id/rvCities"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
