--- a/app/src/main/res/layout/fragment_fav.xml
+++ b/app/src/main/res/layout/fragment_fav.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
+        android:id="@+id/rvCities"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/tv_no_fav_text"
+        android:id="@+id/tvEmpty"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="248dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="248dp"
         android:gravity="center"
         android:text="@string/no_fav_city_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,19 +24,30 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/iv_no_city_fav"
+        android:id="@+id/ivEmptyCity"
         android:layout_width="118dp"
         android:layout_height="105dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/icon_no_fav"
-        app:layout_constraintBottom_toTopOf="@+id/tv_no_fav_text"
+        android:contentDescription="@string/image_displaying_no_favourite_cities"
+        app:layout_constraintBottom_toTopOf="@+id/tvEmpty"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/my_recycler_view"
-        app:layout_constraintVertical_bias="1.0"
-        android:contentDescription="@string/image_displaying_no_favourite_cities" />
+        app:layout_constraintTop_toTopOf="@+id/rvCities"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="132dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
