--- a/app/src/main/res/layout/fragment_top_places_to_eat.xml
+++ b/app/src/main/res/layout/fragment_top_places_to_eat.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.main.topPlacesToEat.TopPlacesToEatActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
+        android:id="@+id/rvCities"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -39,8 +39,8 @@
         android:gravity="center"
         android:text="@string/couldnt_find_city"
         android:textSize="@dimen/text_size_16"
-        app:layout_constraintBottom_toBottomOf="@+id/my_recycler_view"
-        app:layout_constraintEnd_toEndOf="@+id/my_recycler_view"
+        app:layout_constraintBottom_toBottomOf="@+id/rvCities"
+        app:layout_constraintEnd_toEndOf="@+id/rvCities"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
